# World-Class-SEO-Agent-System

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  ChatGPT.md  Claude.md  Claudecode.md  Codex.md  LICENSE.md  Manus.md  README.md  Replit.md  SECURITY.md  SUPPORT.md  SYSTEM_MAP.md  SYSTEM_SPEC.md  main.py  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
adapters/: README.md  TOOLS.md  __init__.py  accessibility_checker.py  ai_citation_monitor.py  backlinks.py  base.py  crawler_csv.py  crux.py  evidence_store.py  ga4.py  gbp_local.py  google_pagespeed_live.py  gsc.py  gsc_live_example.py  hreflang_validator.py  knowledge_graph.py  log_parser.py  mcp_extensions.py  page_drift.py  pagespeed.py  rank_tracking.py  redirect_chain.py  registry.py  rendered_page.py  robots_txt.py  schema_validation.py  sitemap_validator.py  url_safety.py
agents/: AGENT_INDEX.md  ai-principal-seo-scientist.md  competitive-intelligence-agent.md  digital-pr-programmatic-link-outreach-agent.md  geo-aio-optimization-agent.md  international-multilingual-seo-agent.md  local-seo-agent.md  negative-seo-security-agent.md  predictive-seo-trend-agent.md  senior-seo-engineer-agent.md  senior-seo-strategist-agent.md  seo-accessibility-agent.md  seo-compliance-legal-agent.md  seo-copywriter-content-agent.md  seo-cro-agent.md  seo-diagnostic-infrastructure-agent.md  seo-ecommerce-agent.md  seo-full-audit-analyst-agent.md  seo-information-architecture-agent.md  seo-knowledge-graph-sync-agent.md  seo-output-report-agent.md  seo-research-and-development-agent.md  seo-scrummaster-agent.md  seo-technical-agent.md  visual-video-search-agent.md  voice-search-conversational-agent.md
docs/: 20-PASS-WORLD-CLASS-RUNTIME-REVIEW.md  APIVR-COMMITTED-STATE-2026-07-14.md  APIVR-RUNTIME-REGRESSION-REMEDIATION-2026-07-14.md  ARCHITECTURE.md  AUTHORITY-MEDIA-DRIFT.md  BENCHMARKS.md  COMMANDS.md  COMPARATIVE-REBASELINE-2026-07-11.md  CONTENT-INTELLIGENCE.md  GOOGLE-INTEGRATIONS.md  GOVERNANCE.md  INSTALL.md  INTEGRATION-MANIFEST.md  OPTIONAL-INTEGRATIONS.md  OWNERSHIP-AND-LICENSE-NOTE.md  PRODUCT-PROOF-20-PASS-REVIEW.md  PRODUCT-PROOF-TECHNICAL-AUDIT.md  QUALITY-SECURITY-OBSERVABILITY.md  QUICKSTART.md  REMEDIATION-RUNTIME-ARCHITECTURE.md  ROADMAP.md  SECURITY-MODEL.md  SKILLS-REFERENCES-PROMPTS.md  TECHNICAL-EXECUTION.md  TROUBLESHOOTING.md  evidence-cache-contract.md  mcp-server-mapping.md  plugin-packaging.md  plugin.example.json
evaluation/: ci-diagnostic.md  final-runtime-hardening-trigger.txt  release-script-diagnostic-trigger.txt  release-script-mypy.md  reviewer-registry.json  secret-scan-diagnostic.json  secret-scan-trigger.txt  type-diagnostic-trigger.txt  type-diagnostic.md  type-remediation-trigger.txt  type-remediation.md
examples/: README.md
integrations/: __init__.py
knowledge/: agent-friendly-pages.md  ai-image-labeling.md  anti-patterns.md  core-web-vitals-gates.md  deprecation-registry.json  dma-consent-mode-v2.md  eeat-quality-rubric.md  free-backlink-sources.md  geo-readiness-rubric.md  google-algorithm-updates.json  knowledge-sources.md  parasite-seo-expired-domain-checks.md  primary-source-technical-seo.md  product-claim-inventory.json  reference-registry.json  regional-search-engines.md  schema-deprecation-registry.md  scoring-model.md  seo-claim-registry.json  seo-quality-gates.md  seo-vertical-profiles.md
orchestration/: README.md  capability-registry.json  product-proof-capability-overlay.json  session-state.schema.json
prompts/: COMPONENTS.md  WORKFLOWS.md  prompt-manifest.json
runtime/: __init__.py  assets.py  business_profile_resolver.py  capability_resolver.py  evidence_binding.py  execution_limits.py  executor.py  finding_registry.py  llm.py  memory.py  orchestrator.py  routing.py  run_budget.py  safe_paths.py  schema_registry.py  state.py  structured_output.py  telemetry.py  tools.py  workflow_graph.py  workflow_runner.py
schemas/: agent-output.schema.json  decision-record.schema.json  handoff-payload.schema.json  improvement-cycle.schema.json  material-claim.schema.json  reviewer-verdict.schema.json  rule-update.schema.json
scripts/: apply_final_runtime_hardening.py  apply_type_remediation.py  consent_mode_diagnostic.py  content_brief_evidence.py  generate_command_docs.py  generate_release_manifest.py  generate_sbom.py  generate_skill_index.py  inventory_comparator.py  render_content_prompt.py  run_improvement_cycle.py  run_performance_benchmarks.py  run_security_mutation_checks.py  scan_secrets.py  seo_pdf_report.py  serp_cluster.py  validate-repository.ps1  validate_canonical_skill_consistency.py  validate_evidence_binding.py  validate_improvement_evidence.py  validate_phase6_readiness.py  validate_product_claims.py  validate_product_proof_program.py  validate_reference_freshness.py  validate_release_artifacts.py  validate_release_version.py  validate_schema_examples.py  validate_seo_claims.py  (+1 more)
seoctl/: cli.py  (+13 more)
(+213 files in other folders)
