[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "world-class-seo-agent-system"
version = "1.7.0"
description = "Model-agnostic SEO agent operating system with runtime contracts, adapters, schemas, workflows, and validation tests."
requires-python = ">=3.10"
dependencies = [
  "tenacity>=8.2.0"
]

[project.scripts]
seoctl = "seoctl.entrypoint:main"

[project.optional-dependencies]
dev = [
  "jsonschema>=4.22.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "PyYAML>=6.0.0",
  "tenacity>=8.2.0"
]

[tool.setuptools.packages.find]
include = ["adapters*", "evaluation*", "integrations*", "runtime*", "scripts*", "seoctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
