[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "world-class-seo-agent-system"
version = "1.7.0"
description = "Model-agnostic SEO agent operating system with runtime contracts, adapters, schemas, workflows, and validation tests."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22.0",
  "tenacity>=8.2.0"
]

[project.scripts]
seoctl = "seoctl.entrypoint:main"

[project.optional-dependencies]
render = [
  "playwright>=1.49,<2"
]
dev = [
  "jsonschema>=4.22.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=6.0,<8",
  "PyYAML>=6.0.0",
  "tenacity>=8.2.0",
  "ruff>=0.9,<1",
  "mypy>=1.15,<3",
  "pip-audit>=2.7,<3",
  "build>=1.2,<2"
]

[tool.setuptools.packages.find]
include = ["adapters*", "evaluation*", "integrations*", "runtime*", "scripts*", "seoctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.run]
branch = true
source = ["runtime", "seoctl", "integrations", "adapters"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_covered = false
